--- a/src/app/pages/dashboards/project-control/project-control.component.html
+++ b/src/app/pages/dashboards/project-control/project-control.component.html
@@ -191,6 +191,8 @@
                                             <input type="text" class="form-control" style="width: 400px; margin-right: 30px;" placeholder="Buscar un Elemento" [(ngModel)]="searchTerm" (input)="filterList(searchTerm)"><!-- [(ngModel)]="term"-->
                                             <i class="ri-search-line search-icon"></i>
                                         </div>
+                                        
+                                        <button class="btn btn-primary waves-effect waves-light" (click)="clearFilters()"> Limpiar Filtros</button>
                                     </div>
                                 </div>
                             </div>
