correccion filtro detalle y filtro en identificacion

--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -751,6 +751,16 @@
             </div>
             <div class="col-sm-auto">
                 <div class="d-md-flex justify-content-sm-end gap-2">
+                    <select class="form-select" style="background-color: #F3F6F9;border: 0.621px solid #F3F6F9;width: 400px;" placeholder="Todos" data-choices data-choices-search-false id="choices-priority-input3" (change)="selectEstado($event)">
+                        <option value="" [selected]="!filtro_estado">Todos</option>
+                        <option value="1" [selected]="filtro_estado == '1'">
+                            Por Gestionar
+                        </option>
+                        <option value="2" [selected]="filtro_estado == '2'">
+                            Por Definir
+                        </option>
+                    </select>
+
                     <div class="search-box ms-md-2 flex-shrink-0 mb-3 mb-md-0">
                         <input type="text" class="form-control" style="width: 400px;margin-right: 39px;" placeholder="Buscar el cuerpo legal" [(ngModel)]="term3"><!--"service.searchTerm"-->
                         <i class="ri-search-line search-icon"></i>
@@ -1015,7 +1025,7 @@
 
                                 </ng-template>
 
-                                <ng-container *ngFor="let g of articles_proyects_group | filter_cuerpo:term3 ;let impar = odd;let par = even;">
+                                <ng-container *ngFor="let g of articles_proyects_group_filter | filter_cuerpo:term3 ;let impar = odd;let par = even;">
 
                                 <div class="card" style="box-shadow: none !important;">
                                     <!--<div class="card-header">
